add rest api authentication
