# components/controller/src/rest/router.js
@@ -1,4 +1,5 @@
 const fs = require('fs')
+const http = require('http')
 const path = require('path')
 
 const Ajv = require('ajv')
@@ -11,6 +12,18 @@ const ajv = new Ajv({ schemaId: 'auto' })
 const validateSpec = ajv
   .addMetaSchema(require('ajv/lib/refs/json-schema-draft-04.json'))
   .compile(openapi.v3)
+
+function authorizeFactory (securityScope) {
+  return (req, res, next) => {
+    const { scope } = req.authInfo
+    if (securityScope === 'any' || scope === 'all' || securityScope.indexOf(scope) !== -1) {
+      return next()
+    }
+
+    res.statusCode = 403
+    return res.end(http.STATUS_CODES[res.statusCode])
+  }
+}
 
 function routerFactory (filename) {
   const content = fs.readFileSync(path.join(__dirname, filename), 'utf8')
@@ -26,9 +39,15 @@ function routerFactory (filename) {
 
   for (const path in spec.paths) {
     for (const method in spec.paths[path]) {
-      const opId = spec.paths[path][method].operationId
+      const {
+        operationId: opId,
+        'x-security-scope': securityScope
+      } = spec.paths[path][method]
+
+      const authorize = authorizeFactory(securityScope)
       const operation = require(`./methods/${opId}`)
-      router[method](path, operation)
+
+      router[method](path, authorize, operation)
     }
   }
 
